--- a/src/TestFactors/Test.csproj
+++ b/src/TestFactors/Test.csproj
@@ -51,18 +51,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Factors\Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Factors\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Factors\testFactors.cs" />
-    <Compile Include="Heatmap\testHeatmap.cs" />
     <Compile Include="MTDBLoading\MTDBLoaderAccessTest.cs" />
     <Compile Include="PeakMatching\IMSPeakMatchingTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UMC\ClusteringTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MultiAlignWin\MultiAlignWin.csproj">
@@ -81,12 +74,6 @@
       <Project>{BDFA22C4-5822-4AA5-996E-6FDE57F7118B}</Project>
       <Name>PNNLProteomics</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Factors\Form1.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
