Issue #225 Fixed the clustering problem (clustering within datasets). Added "cluster on charge" flag to the algorithm to not cluster dissimilar charges for IMS data. Added settings to persist between analyses.

--- a/src/MultiAlignWin/app.config
+++ b/src/MultiAlignWin/app.config
@@ -218,6 +218,9 @@
             <setting name="UserDBFormMinObservationCountFilter" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="UserClusterOptionsIgnoreChargeStates" serializeAs="String">
+                <value>True</value>
+            </setting>
         </MultiAlignWin.Properties.Settings>
     </userSettings>
 </configuration>
