--- a/src/MultiAlignWin/Properties/Settings.settings
+++ b/src/MultiAlignWin/Properties/Settings.settings
@@ -215,5 +215,8 @@
     <Setting Name="UserDBFormMinObservationCountFilter" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="UserClusterOptionsIgnoreChargeStates" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
