Issue #230 Made the histogram a bar chart instead of line plot for use on ASMS poster.

--- a/src/PNNLControls/PNNLControls.csproj
+++ b/src/PNNLControls/PNNLControls.csproj
@@ -204,6 +204,9 @@
     <Compile Include="Drawing\Charting\ctlHeatChart.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Drawing\Charting\ctlHistogram.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Drawing\Charting\ctlLineChart.cs">
       <SubType>UserControl</SubType>
     </Compile>
