--- a/src/MultiAlignWin/app.config
+++ b/src/MultiAlignWin/app.config
@@ -179,19 +179,19 @@
             <setting name="UserClusterOptionsDriftTimeTolerance" serializeAs="String">
                 <value>50</value>
             </setting>
-            <setting name="SMARTIsDataPaired" serializeAs="String">
+            <setting name="STACIsDataPaired" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="SMARTNETTolerance" serializeAs="String">
+            <setting name="STACNETTolerance" serializeAs="String">
                 <value>0.05</value>
             </setting>
-            <setting name="SMARTMassTolerance" serializeAs="String">
+            <setting name="STACMassTolerance" serializeAs="String">
                 <value>20</value>
             </setting>
-            <setting name="SMARTUsePriorProbabilities" serializeAs="String">
+            <setting name="STACUsePriorProbabilities" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="SMARTPairedMass" serializeAs="String">
+            <setting name="STACPairedMass" serializeAs="String">
                 <value>20</value>
             </setting>
             <setting name="UserDBFormMTDBExperimentFilter" serializeAs="String">
@@ -219,6 +219,9 @@
                 <value>0</value>
             </setting>
             <setting name="UserClusterOptionsIgnoreChargeStates" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="UserClusterOptionsAlignToDatabase" serializeAs="String">
                 <value>True</value>
             </setting>
         </MultiAlignWin.Properties.Settings>
