--- a/src/PNNLProteomics/PNNLProteomics.csproj
+++ b/src/PNNLProteomics/PNNLProteomics.csproj
@@ -113,15 +113,10 @@
     <Compile Include="Analysis\clsHistogram.cs" />
     <Compile Include="Analysis\clsLinearNormalizer.cs" />
     <Compile Include="Cephes\clsMathUtilities.cs" />
-    <Compile Include="Filters\ChargeFilter.cs" />
-    <Compile Include="Filters\DatasetMembersFilter.cs" />
-    <Compile Include="Filters\DriftTimeFilter.cs" />
     <Compile Include="Filters\FilterUtil.cs" />
     <Compile Include="Filters\IFilter.cs" />
-    <Compile Include="Filters\IntensityFilter.cs" />
-    <Compile Include="Filters\MassRangeFilter.cs" />
-    <Compile Include="Filters\NetFilter.cs" />
-    <Compile Include="Filters\SpectralCountFilter.cs" />
+    <Compile Include="Filters\UMCClusterFilters.cs" />
+    <Compile Include="Filters\UMCFilters.cs" />
     <Compile Include="IO\XAMTReader.cs" />
     <Compile Include="MultiAlign\classMultiAnalysisConverters.cs" />
     <Compile Include="MultiAlign\clsMultiAlignAnalysis.cs" />
@@ -138,10 +133,6 @@
     <Compile Include="Data\Factors\classFactorTree.cs" />
     <Compile Include="Data\Factors\classTreeNode.cs" />
     <Compile Include="Data\Factors\classTreeNodeConverter.cs" />
-    <Compile Include="Data\Loaders\clsDatabaseDatasetIDLoader.cs" />
-    <Compile Include="Data\Loaders\clsDatabaseDatasetLoader.cs" />
-    <Compile Include="Data\Loaders\clsDiskDatasetLoader.cs" />
-    <Compile Include="Data\Loaders\delegatesLoading.cs" />
     <Compile Include="Data\MassTags\clsMassTags.cs" />
     <Compile Include="EventModel\Delegates.cs" />
     <Compile Include="EventModel\IMessageClass.cs" />
